fix title align

--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -117,10 +117,13 @@
             }
         }
         h1 {
+            @media (max-width: 768px){
+                text-align: center;
+            }
             @media (min-width:769px) and (max-width: 1023px) {
-                    max-width: 300px;
-                    text-align: center;
-                }
+                max-width: 300px;
+                text-align: center;
+            }
         }
     }
 }
